# sql-server-mcp

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.json  cursor_config.json  docker-compose.yml  pyproject.toml  requirements.txt  run_mcp.bat  run_mcp.sh  setup_wsl.bat  setup_wsl.sh  test_setup.py  vscode_settings.json
sql_server_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
